--- a/src/main/resources/assets/elytra-infinite/lang/en_us.json
+++ b/src/main/resources/assets/elytra-infinite/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "key.elytrainfinite.toggle": "Toggle mod",
-    "category.elytrainfinite": "Elytra Infinite",
+    "key.category.minecraft.elytrainfinite": "Elytra Infinite",
     "message.elytrainfinite.on": "ON",
     "message.elytrainfinite.off": "OFF",
     "elytrainfinite.pitchsettings": "Pitch angles",
